fixed navbar and bugs in workoutlog pages

--- a/views/layouts/editWorkoutLog.handlebars
+++ b/views/layouts/editWorkoutLog.handlebars
@@ -88,7 +88,7 @@
 
           <div class="card-body">
             <div class="card-title d-flex flex-row justify-content-between">
-              <h4 class=""><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{name}}</a></h4>
+              <h4><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{name}}</a></h4>
               <button id="removeExerciseButton{{@index}}" class="btn btn-outline-danger">Remove Exercise</button>
             </div>
 
