--- a/views/layouts/navbar.handlebars
+++ b/views/layouts/navbar.handlebars
@@ -30,10 +30,10 @@
                             <a class="nav-link" href="/">Home</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link" href="/">Workouts</a>
+                            <a class="nav-link" href="/workout/create">Create Workout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Logged Workouts</a>
+                            <a class="nav-link" href="/exercises/new">Create Exercise</a>
                         </li>
                     </ul>
 
