--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -88,9 +88,9 @@
           <div hidden id="hr"><hr></div>
           <div id="editPassword" hidden class="row">
             <label class="col-sm-5" for="inputPassword">Password</label>
-            <input value="{{password}}" name="inputPassword" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" class="form-control col-sm-6" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Password" required>
+            <input value="{{password}}" name="inputPassword" type="password" class="form-control col-sm-6" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Password" required>
             <small id="passwordHelpBlock" class="form-text text-muted col-sm-5">
-              Password must be at at least eight characters, containing at least one uppercase letter, one lowercase letter, one number, and one special character
+              Password must be provided
             </small>
           </div>
           <hr>
@@ -232,8 +232,8 @@
                 </div>
                 
                 <div>
-                  <button class="btn btn-primary" href="/workoutLog/{{logInfo.workout}}">View</button>
-                  <button class="btn btn-outline-primary" href="/workoutLog/edit/{{logInfo.workout}}">Edit Workout Log</button>
+                  <a class="btn btn-primary" href="/workoutLog/{{_id}}">View</a>
+                  <a class="btn btn-outline-primary" href="/workout/{{workout}}/logedit/{{_id}}">Edit Workout Log</a>
                 </div>
               </div>
 
