--- a/views/layouts/signup.handlebars
+++ b/views/layouts/signup.handlebars
@@ -22,9 +22,9 @@
       </div>
       <div class="form-group">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input name="inputPassword" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" class="form-control" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Password" required>
+        <input name="inputPassword" type="password" class="form-control" id="inputPassword" aria-describedby="passwordHelpBlock" placeholder="Password" required>
         <small id="passwordHelpBlock" class="form-text text-muted">
-          Password must be at at least eight characters, containing at least one uppercase letter, one lowercase letter, one number, and one special character
+          Password must be provided
         </small>
       </div>
       <div class="form-row">
