--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -105,3 +105,16 @@ li.signup-btn  {
 #pill-badge {
     padding: 12px;
 }
+
+.profile-card {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.profile-text {
+    margin-left: 1rem;
+}
+
+.p-card {
+    margin-bottom: 2rem;
+}
