--- a/views/workouts/workout.handlebars
+++ b/views/workouts/workout.handlebars
@@ -79,7 +79,7 @@
             <ul class="card-body">
                 {{#each exercises}}
                 <li class="card border-5 pb-0 px-3">
-                    <section class="exercise col-md-7" id="this.exerciseId">
+                    <section class="exercise col-md-7">
                         <h3 class="card-title"><a href="/exercise/{{this.exerciseId}}">{{this.name}}</a></h3>
                         <ul>
                             <li class="row">
