--- a/views/layouts/navbar.handlebars
+++ b/views/layouts/navbar.handlebars
@@ -16,7 +16,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 {{!-- brand logo --}}
                 <a class="navbar-brand" href="/">
-                    <img src="/public/images/finalLogo2.png" alt="">
+                    <img alt="iWorkout Logo" src="/public/images/finalLogo2.png">
                 </a>
                 {{!-- toggle button when page width is small enough --}}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
