--- a/views/layouts/profile_edit.handlebars
+++ b/views/layouts/profile_edit.handlebars
@@ -15,7 +15,7 @@
   <form id="profile_edit-form" class="form-profile_edit" method="POST" action="/profile_edit" novalidate>
       <div class="form-group">
         <label for="inputEmail">Email address</label>
-        <input value="{{user.email}}" name="inputEmail" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Email address" required>
+        <input value="{{user.email}}" name="inputEmail" type="email" class="form-control" id="inputEmail" placeholder="Email address" required>
         <div class="invalid-feedback">
           Email must be provided and be valid
         </div>
@@ -72,7 +72,7 @@
       </div>
       <div class="form-group">
         <label for="inputFrequency">Frequency of working out per week</label>
-        <input value="{{user.userInfo.frequencyOfWorkingOut}}" min=0 max=7 name="inputFrequency" type="number" class="form-control" id="inputFrequency" aria-describedby="emailHelp" placeholder="Frequency of working out per week">
+        <input value="{{user.userInfo.frequencyOfWorkingOut}}" min=0 max=7 name="inputFrequency" type="number" class="form-control" id="inputFrequency" placeholder="Frequency of working out per week">
         <div class="invalid-feedback">
             If provided, frequency needs to be between [0, 7]
         </div>
