--- a/views/exercises/exercise.handlebars
+++ b/views/exercises/exercise.handlebars
@@ -22,14 +22,14 @@
       
           <div>
           {{#if exercise.equipment}}
-            <span id="exercise-value-label" class="card-text">Suggested Equipment: </span>
+            <span id="exercise-equipment-label" class="card-text">Suggested Equipment: </span>
             <span class="card-text">{{exercise.equipment}}</span>
           {{/if}}
           </div>
       
           <div>
           {{#if exercise.note}}
-            <span id="exercise-value-label" class="card-text">Note: </span>
+            <span id="exercise-note-label" class="card-text">Note: </span>
             <span class="card-text">{{exercise.note}}</span>
           {{/if}}
           </div>
@@ -48,4 +48,5 @@
         </div>
       {{/if}}
     </div>
+  </div>
 </div>
