--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -89,10 +89,7 @@
           <div hidden id="hr"><hr></div>
           <div id="editPassword" hidden class="row">
             <label class="col-sm-5" for="inputPassword">Password</label>
-            <input value="{{password}}" name="inputPassword" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" class="form-control col-sm-6" id="inputPassword" placeholder="Password" required>
-            <small id="passwordHelpBlock" class="form-text text-muted col-sm-5">
-              Password must be at at least eight characters, containing at least one uppercase letter, one lowercase letter, one number, and one special character
-            </small>
+            <input value="{{password}}" name="inputPassword" type="password" class="form-control col-sm-6" id="inputPassword" placeholder="Password" required>
           </div>
           <hr>
           <div class="row">
