--- a/views/layouts/createWorkoutLog.handlebars
+++ b/views/layouts/createWorkoutLog.handlebars
@@ -5,7 +5,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modalLabel">Confirm?</h5>
+          <h1 class="modal-title h5" id="modalLabel">Confirm?</h1>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -81,14 +81,14 @@
 
   <div class="card mb-2">
     <div class="card-body">
-      <h3>Exercises</h3>
+      <h2 class="h3">Exercises</h2>
       <div id="loggedExercises">
         {{#each workout.exercises}} 
         <div class="card mb-2" id="workoutlog-exerice{{@index}}">
 
           <div class="card-body">
             <div class="card-title d-flex flex-row justify-content-between">
-              <h4 class=""><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{name}}</a></h4>
+              <h3 class="h4"><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{name}}</a></h3>
               <button id="removeExerciseButton{{@index}}" class="btn btn-outline-danger">Remove Exercise</button>
             </div>
 
@@ -156,7 +156,7 @@
   </div>
   <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Add Exercise</h4>
+        <h3 class="card-title h4">Add Exercise</h3>
         <div class="form-group">
           <label for="addExerciseInput" class="sr-only">Add Exercise</label>
           <input id="addExerciseInput" name="addExerciseInput" type="text" class="form-control" placeholder="Exercise Name">          
