--- a/views/layouts/viewWorkoutLog.handlebars
+++ b/views/layouts/viewWorkoutLog.handlebars
@@ -5,7 +5,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modalLabel">Confirm?</h5>
+          <h1 class="modal-title h5" id="modalLabel">Confirm?</h1>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -65,12 +65,12 @@
 
   <div class="card mb-2">
     <div class="card-body">
-      <h3>Exercises</h3>
+      <h2 class="h3">Exercises</h2>
       <div id="loggedExercises">
         {{#each exercises}} 
         <div class="card mb-2" id="workoutlog-exerice">
           <div class="card-body">
-            <h4><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{innerExercise.name}}</a></h4>
+            <h3 class="h4"><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{innerExercise.name}}</a></h3>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Sets</div>
