--- a/views/layouts/viewWorkoutLog.handlebars
+++ b/views/layouts/viewWorkoutLog.handlebars
@@ -68,42 +68,42 @@
       <h2 class="h3">Exercises</h2>
       <div id="loggedExercises">
         {{#each exercises}} 
-        <div class="card mb-2" id="workoutlog-exerice">
+        <div class="card mb-2" id="workoutlog-exerice{{@index}}">
           <div class="card-body">
             <h3 class="h4"><a target="_blank" rel="noopener noreferrer" href="/exercise/{{exerciseId}}">{{innerExercise.name}}</a></h3>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Sets</div>
               <div class="col-sm-8">
-                <div id="exerciseSet">{{sets}}</div>
+                <div id="exerciseSet{{@index}}">{{sets}}</div>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Reps</div>
               <div class="col-sm-8">
-                <div id="exerciseReps">{{repetitions}}</div>
+                <div id="exerciseReps{{@index}}">{{repetitions}}</div>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Rest</div>
               <div class="col-sm-8">
-                <div id="exerciseRest">{{rest}} sec.</div>
+                <div id="exerciseRest{{@index}}">{{rest}} sec.</div>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Weight</div>
               <div class="col-sm-8">
-                <div id="exerciseWeight">{{weight}} lbs</div>
+                <div id="exerciseWeight{{@index}}">{{weight}} lbs</div>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Note</div>
               <div class="col-sm-8">
-                <div id="exerciseNote">{{comment}}</div>
+                <div id="exerciseNote{{@index}}">{{comment}}</div>
               </div>
             </div>
 
