--- a/views/workouts/workout.handlebars
+++ b/views/workouts/workout.handlebars
@@ -20,15 +20,15 @@
                                 {{/if}}
                             </li>
                             <li class="row">
-                                <h6 class="col-sm-5">Likes: </h6>
+                                <h2 class="col-sm-5 h6">Likes: </h6>
                                 <div class="col-sm-7 text-secondary" id="totalLikes">{{workout.usersLiked.length}}</div>
                             </li>
                             <li class="row">
-                                <h6 class="col-sm-5">Intensity: </h6>
+                                <h2 class="col-sm-5 h6">Intensity: </h6>
                                 <div class="col-sm-7 text-secondary" id="totalIntensity">{{workout.intensity}}</div>
                             </li>
                             <li class="row">
-                                <h6 class="col-sm-5">Length: </h6>
+                                <h2 class="col-sm-5 h6">Length: </h6>
                                 <div class="col-sm-7 text-secondary">{{workout.length}} minutes</div>
                             </li>
                             {{#if user}}
@@ -79,22 +79,22 @@
                         <h3 class="card-title"><a href="/exercise/{{this.exerciseId}}">{{this.name}}</a></h3>
                         <ul>
                             <li class="row">
-                                <h6 class="col-sm-5">Sets: </h6>
+                                <h4 class="col-sm-5 h6">Sets: </h6>
                                 <div class="col-sm-7 text-secondary">{{this.sets}}</div>
                             </li>
                             <li class="row">
-                                <h6 class="col-sm-5">Repetitions: </h6>
+                                <h4 class="col-sm-5 h6">Repetitions: </h6>
                                 <div class="col-sm-7 text-secondary">{{this.repetitions}}</div>
                             </li>
                             {{#if this.weight}}
                                 <li class="row">
-                                    <h6 class="col-sm-5">Weight: </h6>
+                                    <h4 class="col-sm-5 h6">Weight: </h6>
                                     <div class="col-sm-7 text-secondary">{{this.weight}}</div>
                                 </li>
                             {{/if}}
                             {{#if this.comment}}
                                 <li class="row">
-                                    <h6 class="col-sm-5">Comment: </h6>
+                                    <h4 class="col-sm-5 h6">Comment: </h6>
                                     <div class="col-sm-7 text-secondary">{{this.comment}}</div>
                                 </li>
                             {{/if}}
