--- a/views/layouts/signin.handlebars
+++ b/views/layouts/signin.handlebars
@@ -15,7 +15,7 @@
   <form id="form-signup" class="form-signin" method="POST" action="/signin" novalidate>
     <div class="form-group">
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input name="inputEmail" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Email address" required>
+      <input name="inputEmail" type="email" class="form-control" id="inputEmail" placeholder="Email address" required>
       <div class="invalid-feedback">
         Email must be provided and be valid
       </div>
