--- a/views/exercises/exercise.handlebars
+++ b/views/exercises/exercise.handlebars
@@ -43,7 +43,7 @@
         <div class="card-footer text-muted">
           <p>Muscles worked</p>
           {{#each exercise.muscles}}
-          <span id="pill-badge" class="badge badge-primary badge-pill">{{this}}</span>
+          <span id="pill-badge-{{this}}" class="badge badge-primary badge-pill">{{this}}</span>
           {{/each}}
         </div>
       {{/if}}
